# open_industrial_ros_controllers

./: .gitignore  .travis.yml  README.md
densowave/VS060A1_AV6_NNN_NNN_arm_navigation/: mainpage.dox  manifest.xml
densowave/VS060A1_AV6_NNN_NNN_arm_navigation/launch/: VS060A1_AV6_NNN_NNN_arm_navigation.launch  VS060A1_AV6_NNN_NNN_planning_environment.launch  constraint_aware_kinematics.launch  move_groups.launch  ompl_planning.launch  planning_components_real_robot.launch  planning_components_simulation.launch  planning_components_visualizer.launch  planning_scene_warehouse_viewer_VS060A1_AV6_NNN_NNN.launch  trajectory_filter_server.launch
densowave/denso_controller/: CMakeLists.txt
densowave/denso_launch/: CMakeLists.txt  manifest.xml
densowave/denso_launch/launch/: denso_vs06_kinect_demo_real.launch  denso_vs06_kinect_demo_simulation.launch  denso_vs06_startup_skelton.launch
densowave/vs060/: CMakeLists.txt  catkin.cmake  package.xml
densowave/vs060_moveit_config/: package.xml
densowave/vs060_moveit_config/launch/: demo.launch  demo_simulation.launch
open_controllers_interface/: CHANGELOG.rst  CMakeLists.txt  catkin.cmake  mainpage.dox  package.xml
open_controllers_interface/include/open_controllers_interface/: open_controllers_interface.h
open_controllers_interface/src/: open_controllers_interface.cpp
open_industrial_controllers_common/open_controllers_interface/: CMakeLists.txt  manifest.xml  package.xml
open_industrial_controllers_common/open_controllers_interface/include/open_controllers_interface/: open_controllers_interface.h
open_industrial_ros_controllers/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_industrial_ros_controllers/open_controllers_interface/: package.xml
open_industrial_web_interface/: .gitignore  README.md  manifest.xml
open_industrial_web_interface/launch/: demo.launch  sim_demo.launch
open_industrial_web_interface/msg/: MoveGroupPlan.msg
open_industrial_web_interface/nodes/: interactive_moveit.py  joint_state_publisher  moveit_publisher.py  virtual_joint_state_publisher
open_industrial_web_interface/www/: index.html
open_industrial_web_interface/www/js/: basic.js
