<?xml version="1.0"?>
<package>
  <name>open_industrial_ros_controllers</name>
  <version>0.1.1</version>
  <description>The open_industrial_ros_controllers package</description>

  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>
  <maintainer email="iisaito@opensource-robotics.tokyo.jp">Isaac Isao Saito</maintainer>
  <license>BSD</license>
  <author email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</author>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>

  <url type="website">http://wiki.ros.org/open_industrial_ros_controllers</url>
  <url type="bugtracker">https://github.com/start-jsk/open-industrial-ros-controllers/issues</url>
  <url type="repository">https://github.com/start-jsk/open-industrial-ros-controllers</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>open_controllers_interface</run_depend>

  <export><metapackage/></export>
</package>