<?xml version="1.0"?>
<package>
  <name>open_industrial_ros_controllers</name>
  <version>0.1.4</version>
  <description><p>This package provides common functionality, especially plugin architecture for industrial robot controllers, much like the one in <a href = "http://wiki.ros.org/pr2_mechanism">pr2_mechanism</a>.</p>
   <p>The plan is in the near future to utilize or integrate with existing other controller packages.</p>
  </description>

  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>
  <maintainer email="iisaito@opensource-robotics.tokyo.jp">Isaac Isao Saito</maintainer>
  <license>BSD</license>
  <author email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</author>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>

  <url type="website">http://wiki.ros.org/open_industrial_ros_controllers</url>
  <url type="bugtracker">https://github.com/start-jsk/open-industrial-ros-controllers/issues</url>
  <url type="repository">https://github.com/start-jsk/open-industrial-ros-controllers</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>open_controllers_interface</run_depend>

  <export><metapackage/></export>
</package>