<package>
  <name>vs060</name>
  <version>0.1.0</version>
  <description>hoge</description>
  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <license>BSD</license>


  <author email="ueda@jsk.t.u-tokyo.ac.jp">Kei Okada</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslang</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <!-- build_depend>actionlib_tutorials</build_depend -->

  <run_depend>roslang</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <!-- run_depend>actionlib_tutorials</run_depend -->

</package>
